# arm_pkg

./: CMakeLists.txt  README.md  eod_param.yaml  package.xml
action/: ArmClaw.action  ArmPose.action  MoveArm.action
launch/: arm.launch
msg/: TraiettoriaDiscretizzata.msg
scripts/: actuator_node.py  actuator_node.py~  arm_governor.py  arm_governor.py~  elementaryArmActionServer.py  inv_kin_node.py  tester.py
srv/: CinematicaInversa.srv  TraiettoriaDiscreta.srv
test/: test.py
