<?xml version="1.0"?>
<package>
  <name>arm_pkg</name>
  <version>0.0.0</version>
  <description>Package for manage a robot arm</description>
  <!-- email not inserted -->
  <maintainer email="p-ansatz@todo.todo">p-ansatz</maintainer>

  <license>TODO</license>

  <build_depend>message_generation</build_depend>
  <run_depend>message_runtime</run_depend> 
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>rospy</build_depend>
  <run_depend>rospy</run_depend>
  <build_depend>actionlib_msgs</build_depend>
  <run_depend>actionlib_msgs</run_depend>

  <export>
  </export>
</package>
